--- a/example.appsettings.json
+++ b/example.appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ArtistContext": "Server=(localdb)\\mssqllocaldb;Database=ArtistAwards;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ArtistContext": "Server=${replace_with_server_name};Port=${replace_with_port_number};Database=ArtistAwards;User Id=${replace_with_user_id};Password=${replace_with_password};"
   }
 }
