Change Domain value in Cookies to allow storage in production deployment
- Add ConfigService that handles settings based on environment
- Remove launchSettings from git and replace with example.launchSettings. This will allow different deployments of the app to have separate environment settings that aren't affected by git commits.

--- a/ArtistAwards.csproj
+++ b/ArtistAwards.csproj
@@ -19,10 +19,19 @@
     <Content Remove="Pages\Details.cshtml" />
     <Content Remove="Pages\Edit.cshtml" />
     <Content Remove="Pages\Index.cshtml" />
+    <Content Remove="Properties\example.launchSettings.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Pages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Properties\example.launchSettings.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
