--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # David's additions
 appsettings.json
 appsettings.Development.json
+Properties/launchSettings.json
 
 # User-specific files
 *.rsuser
