Fix bug that causes auth cookies to not be deleted on logout
- Set auth cookies to expire on logout instead of using the Cookies.Delete method
- Add ConfigCookies methods for access and refresh token cookies settings. This will allow cookies settings to be modified depending on the context (cookies from login method, logout method, etc) by simply passing the necessary parameters

--- a/ArtistAwards.csproj
+++ b/ArtistAwards.csproj
@@ -28,9 +28,9 @@
 
   <ItemGroup>
     <None Include="Properties\example.launchSettings.json">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>false</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
   </ItemGroup>
 
